@@ -3,6 +3,7 @@ h1. CHANGELOG
 h2. 2.5.1 unreleased
 
 * use 'rails_apps_testing' gem to configure RSpec and friends in 'tests4' recipe
+* install 'binding_of_caller' gem properly for various Ruby versions
 
 h2. 2.5.0 April 22, 2014
 
